TT-61: Fix table overflow in small mobile devices

--- a/src/app/components-library/base-table-container/base-table/base-table.component.scss
+++ b/src/app/components-library/base-table-container/base-table/base-table.component.scss
@@ -5,7 +5,7 @@ app-base-table {
         overflow-x: auto;
 
         .table {
-            padding: 0 10px 10px;
+            padding: 0 0.5rem 0.5rem;
 
             .mdc-data-table__header-cell {
                 padding: 0 2px;
